src/test/deca/codegen/invalid/test_arth_plus.deca
// Description:
//  Test overflow entre la somme de deux flaots 
//
//
// Resultats:
//
// Historique:
//    cree le 01/01/2023

{
    float f = 50000000000;
    float f = 55555555555;
}
